[package]
name = "bevy_step_by_step"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15"

[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "ecs_simple"
path = "examples/ecs/simple.rs"
doc-scrape-examples = true

[[example]]
name = "ecs_component"
path = "examples/ecs/component.rs"
doc-scrape-examples = true

[[example]]
name = "window_window"
path = "examples/window/window.rs"
doc-scrape-examples = true

[[example]]
name = "system_system"
path = "examples/system/system.rs"
doc-scrape-examples = true